flexbox bug fix (footer overlapping)

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -177,7 +177,7 @@
  */
 .page-content {
   padding: $spacing-unit 0;
-  flex: 1;
+  flex: 1 0 auto;
 }
 
 .page-heading {
